# resume

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  .project  AGENTS.md  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  config.yaml  convert_latex.go  cv_data.json  cv_data.yaml  generate_sections.go  generate_sections.py  go.mod  main.go  main.odin  main.tex  ols.json  pom.xml
.github/workflows/: deploy.yaml
autocv-cli/: Cargo.toml
autocv-cli/src/: main.rs
autocv-core/: Cargo.toml
autocv-core/src/: cv.rs  cv_model.rs  cv_processor.rs  latex.rs  lib.rs  load_cv.rs
autocv-core/src/cv/: load.rs  model.rs  processor.rs  template.rs
autocv-gui/: Cargo.toml
autocv-gui/src/: actor.rs  app.rs  main.rs
autocv-gui/src/app/: style.rs  ui.rs
bw_cv/: main.tex
bw_cv/sections/: Achivements_Skills.tex  Awards.tex  Education.tex  Experience.tex  Header.tex  Projects.tex
cmake/: compiler_options.cmake  dependencies.cmake
cmd/autocv/: main.go
cmd/resume/: main.go
config/: experiences.yaml  general.yaml  projects.yaml
cv/devops/bw_cv/sections/: Achivements_Skills.tex  Awards.tex  Header.tex
cv/devops/main_cv/sections/: Achivements_Skills.tex  Education.tex  Experience.tex  Header.tex  Projects.tex
cv/fullstack/bw_cv/sections/: Education.tex  Experience.tex  Projects.tex
cv/fullstack/main_cv/: main.tex
cv/fullstack/main_cv/sections/: Experience.tex  Projects.tex
cv/main/main_cv/sections/: Experience.tex
include/: concurrent_hash_set.h
include/model/: experience.h  general.h  project.h
include/parse/: YAMLProcessor.h
include/scheduler/: scheduler.h
internal/model/: experience.go
internal/parse/: experience.go  experience_test.go  stack.go
internal/state/: state.go
internal/ui/: app.go  keys.go  style.go
internal/ui/views/: config_panel.go  content_panel.go  cv_types_panel.go
internals/: generate_sections.go  types.go  write_files.go
internals/builder/: builder.go
internals/config/: parse.go
internals/generator/: builder.go  generate.go  template.go
internals/latex/: generate.go
internals/model/: types.go
internals/parse/: parse.go
internals/resume/: model.go  types.go
internals/utils/: utils.go
main_cv/: main.tex
main_cv/sections/: Achivements_Skills.tex  Awards.tex  Education.tex  Experience.tex  Header.tex  Projects.tex
sections/: Achivements_Skills.tex  Awards.tex  Certifications.tex  Education.tex  Experience.tex  Header.tex  Projects.tex  Technologies.tex
src/: CMakeLists.txt  config.rs  cv_processor.rs  latex.rs  load_cv.rs  main.cpp  main.rs  main.typ  test_fiber.cpp  types.rs
src/config/: experiences.typ  personal_info.typ  projects.typ
src/cv_type/: cv_type.typ  section.typ
src/main/java/org/senop/: App.java  Main.java
src/main/java/org/senop/logic/: CVTypesProcessor.java
src/main/java/org/senop/model/: Experience.java  General.java  Project.java
src/main/java/org/senop/parse/: YAMLParsingException.java  YAMLProcessor.java
src/model/: experience.cpp  experience.odin  general.cpp  project.cpp  project.odin
src/parse/: YAMLProcessor.cpp  parse_yaml.odin
src/scheduler/: scheduler.cpp
src/test/java/org/senop/: AppTest.java
template/: template.typ
template_cv/bw_cv/: main.tex
template_cv/bw_cv/sections/: Achivements_Skills.tex  Awards.tex  Experience.tex  Header.tex  Projects.tex  Research_Interests.tex
template_cv/type1_cv/: main.tex
template_cv/type1_cv/sections/: Education.tex  Experience.tex  Header.tex
