[workspace]
members = [ "autocv-core", "autocv-cli", "autocv-gui",]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.9"
lazy_static = "1.4.0"
regex = "1.10.4"
anyhow = "1.0"
