[package]
name = "autocv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace= true, features = ["full"] }
futures = {workspace= true}
serde = { workspace = true, features = ["derive"]}
serde_yaml = {workspace= true}
lazy_static = {workspace= true}
regex = {workspace= true}
anyhow = {workspace= true}
