[package]
name = "autocv-core"
version = "0.1.0"
edition = "2024"

[dependencies]
minijinja = {version="2.0", features=["custom_syntax", "loader"]}
tokio = { workspace= true, features = ["full"] }
futures = {workspace= true}
serde = { workspace = true, features = ["derive"]}
serde_yaml = {workspace= true}
lazy_static = {workspace= true}
regex = {workspace= true}
anyhow = {workspace= true}
env_logger = {workspace = true}
log = {workspace = true}
