[package]
name = "autocv-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
autocv-core = { path = "../autocv-core" }
tokio = { workspace= true, features = ["full"] }
futures = {workspace= true}
anyhow = {workspace= true}
egui = "0.32.1"
eframe = { version = "0.32.1", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
    "x11",           # To support older Linux distributions (restores one of the default features)
] }

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = {workspace = true}
log = {workspace = true}

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
